# base16384-sycl

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/: errors.hpp  test.hpp  xeinfo.hpp
libs/: CMakeLists.txt  errors.cpp  test_kernels.cpp
tests/: CMakeLists.txt  basic.cpp  fig-2-2_simple-sycl-program.cpp  fig-2-9_selecting-host-device.cpp  fig-3-10_in-order-queue-usage.cpp  fig-3-11_using-events-and-depends-on.cpp  fig-3-13_read-after-write.cpp  fig-3-15_write-after-read-and-write-after-write.cpp  fig-3-4_usm-explicit-data-movement.cpp  fig-3-5_usm-implicit-data-movement.cpp  fig-3-6_buffers-and-accessors.cpp
